# random_chooser_drop

./: .gitignore  Cargo.toml  README.md  choices.json  config.json  games.csv
src/: choices.rs  draw_data.rs  lib.rs  main.rs  physics.rs
src/config/: config_struct.rs  mod.rs
src/event_manager/: event.rs  mod.rs
src/helpers/: create_winner_text.rs  is_dark_color.rs  mod.rs  point.rs  serde_color.rs  serde_default_color.rs  vector2.rs
src/physics/: event_handler.rs  mod.rs
