[package]
name = "random_chooser_drop"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
serde_json = "1.0.64"
eyre = "0.6.5"
serde = { version = "1.0.125", features = ["derive"] }
rapier2d = { version = "0.8.0", features = [ "simd-stable" ] }
nalgebra = "0.26.2"
rand = "0.8.3"
crossbeam = "0.8.0"
strum = "0.20.0"
strum_macros = "0.20.1"